# idmc-cai-docs

./: .gitignore  README.md  createMultipleIdentifier.PROCESS.xml  pyproject.toml  retrieveconsents.PROCESS.xml
docs/: architecture.md
src/cai_docs/: __init__.py  auth.py  classify.py  cli.py  config.py  describe.py  extract.py  graph.py  ingest.py  models.py  pipeline.py  sidecar.py  verify.py  xmlmodel.py
src/cai_docs/render/: __init__.py
src/cai_docs/render/templates/: asset.md.j2  home.md.j2  moc.md.j2
tests/: conftest.py  test_auth.py  test_classify.py  test_clean_output.py  test_connector_extraction.py  test_describe.py  test_e2e.py  test_expressions.py  test_extract.py  test_graph.py  test_ingest.py  test_links_canvas.py  test_naming_resolution.py  test_reference_tables.py  test_render.py  test_runtime.py  test_scm.py  test_timeouts.py  test_verify.py  test_xmlmodel.py
tests/fixtures/scm/Explore/Proj/: .Proj.Project.json
tests/fixtures/scm/Explore/Proj/Application_Connectors/: .AppConnection-DASSQLServer.AI_CONNECTION.json  AppConnection-DASSQLServer.AI_CONNECTION.xml
tests/fixtures/scm/Explore/Proj/Service_Connectors/: .DASConnectorSQLServer.AI_SERVICE_CONNECTOR.json  DASConnectorSQLServer.AI_SERVICE_CONNECTOR.xml
tests/fixtures/scm/Explore/Proj/config/: collection_points.xml
tests/fixtures/scm/Explore/SaasGlobal/bpel/: SaveConfig.bpel
tests/fixtures/synthetic/: ConsentGuide.GUIDE.xml  ConsentRecord.PROCESSOBJECT.xml  MyServiceConnector.SERVICECONNECTOR.xml  OT-Submit-Consent.CONNECTION.xml  purposes.xsd  weird_unknown.xml
(+1 files in other folders)
